--- a/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -13,7 +13,7 @@
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
                 <form>
-                    <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
+                    {{ form }}
                 </form>
                 <div>
                     <a href="{% url 'index' %}">Home</a>
@@ -22,7 +22,7 @@
                     Create New Page
                 </div>
                 <div>
-                    Random Page
+                    <a href = "{% url 'random_selector' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
